# bsuir_backend

./: Dockerfile  db.sqlite3  pyproject.toml  requirements.txt  server.py
agents/: full_search_agent.py  halal_search_agent.py  kosher_recipes_agent.py
api/: serializers.py  urls.py  utils.py  views.py
api/migrations/: 0001_initial.py
notes/: settings.py
